docs: update blog

--- a/src/md/linux/1.md
+++ b/src/md/linux/1.md
@@ -6,6 +6,7 @@ category:
   - Linux
   - 学习笔记
 ---
+<meta name="referrer" content="no-referrer"/>
 
 ## 本地安装虚拟机
 ### 1.安装VMWare(点击图片跳转下载）
@@ -15,9 +16,6 @@ category:
 <a href="https://mirrors.aliyun.com/centos/7/isos/x86_64/"><img src=https://i-blog.csdnimg.cn/direct/06779940adab4f6b8d0759a6aa0f310d.png#pic_center></a>
 
 ### 3.安装
-![x](https://www.baidu.com/link?url=9CvyAjLNkQ37XL7Q8MFG60TZ2qkeacUzCRi6Q-Cpt_uaxKfSPN4ddorB0-DD5Hd6f3bauMKmFIWCkYSKl3eCGFeztI6d1RsylYilVpfl0QAd1nf9QSLVq74Q7f4K1vXfK94R0tmWjAeXkcQF2DWmwU97CkoGrTZ3YSLLrbu6yQIYQiAV69BHPlDEXB04kVupJsqvgcI9fIkbnMYluOtIjBvIbF1Me855XyltGXc3t1TXmIDUa0nDvkMd-GBbe4Mp-cVYJ7x01Ibj_DMrBz7PTU1iKXU1Ch5kHrHdsCrba2rwvLqs77OgUsXRvO2NbqjQrmjCPA_2NcbZKGUddAvnf8xiM5bMgF-8x1Nz6dmpPYXMZKKO7M2QL8X5geCcmADwJ10g7hKqb2_hfEeqK8SWWyyzTm0S3um8JVyaDxhPhTdoyL_SNIAvT4j9Mu-8YvJN6D6W2KPGdrk0c9uGUvMSmiaApmSDO6TDSfDDB6JMupqWX2eTGAG7HqZQTOdI3FTDAKy0HYClwqQzDDwmC8NYgmaqrQgVry0z-l1ALTzk5Z2riPyPjncRts9j-uKaCHguVuTfoQES2Spn6LpuF35P86CXlvKJTdPxQLC2JocGCsOadFteSahjQDEhItIuid3MWpFZYfe0no_aKdX5x8lU5OyzxK8k_wqmAuzIWmvxu3_&wd=&eqid=f102f15f006446be0000000566ffbbf3)
-![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/e58055c73be74ea5a4f2670779008a81.png)
-
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/2dc455b5e06c4721b8ab1613f70a8abb.png)
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/f9a4322486b940d38a0b419c5055a5ff.png)
 ![在这里插入图片描述](https://i-blog.csdnimg.cn/direct/b3900d9da7494543bb1df8108abf5ad4.png)
