docs: update blog

--- a/src/md/linux/2.md
+++ b/src/md/linux/2.md
@@ -1,12 +1,12 @@
 ﻿---
-title: Linux学习笔记（二）：深入理解用户管理、运行级别与命令行操作
+title: Linux学习笔记（二）
 index: false
 icon: laptop-code
 category:
   - Linux
   - 学习笔记
 ---
-
+<meta name="referrer" content="no-referrer"/>
 ## 1. 用户管理
 ### 1.1 用户密码管理
 #### 创建用户密码
