--- a/src/md/linux/3.md
+++ b/src/md/linux/3.md
@@ -1,12 +1,12 @@
 ﻿---
-title: Linux学习笔记（三）：文件管理、复杂操作与实用工具详解
+title: Linux学习笔记（三）
 index: false
 icon: laptop-code
 category:
   - Linux
   - 学习笔记
 ---
-
+<meta name="referrer" content="no-referrer"/>
 ## 1.文件操作的基本操作
 ---
 ### 1.1 创建
