--- a/src/md/linux/4.md
+++ b/src/md/linux/4.md
@@ -1,12 +1,12 @@
 ﻿---
-title: Linux学习笔记（四）：组与权限、任务调度、磁盘管理、网络配置、进程管理
+title: Linux学习笔记（四）
 index: false
 icon: laptop-code
 category:
 - Linux
 - 学习笔记
 ---
-
+<meta name="referrer" content="no-referrer"/>
 
 ## 1. 组与权限
 
