--- a/src/md/linux/5.md
+++ b/src/md/linux/5.md
@@ -1,12 +1,12 @@
 ﻿---
-title: Linux学习笔记（五）：shell脚本，awk，sed，服务管理
+title: Linux学习笔记（五）
 index: false
 icon: laptop-code
 category:
   - Linux
   - 学习笔记
 ---
-
+<meta name="referrer" content="no-referrer"/>
 ## 1. Shell 脚本
 
 > `Shell` 脚本是一种使用 `Shell` 编写的脚本，它可以在 Linux 系统中执行各种任务。
