--- a/src/md/linux/6.md
+++ b/src/md/linux/6.md
@@ -1,12 +1,12 @@
 ﻿---
-title: Linux学习笔记（六）：服务管理，监控，RPM包管理，yum包管理工具，Linux启动管理，网络管理
+title: Linux学习笔记（六）
 index: false
 icon: laptop-code
 category:
 - Linux
 - 学习笔记
 ---
-
+<meta name="referrer" content="no-referrer"/>
 
 ## 1. 服务管理
 ---
