docs: update blog

--- a/src/md/springboot/1.md
+++ b/src/md/springboot/1.md
@@ -1,7 +1,7 @@
 ﻿---
 title:  ElasticSearch安装分词器与整合SpringBoot
 index: false
-icon: bootstrap
+icon: terminal
 category:
   - SpringBoot
   - ElasticSearch
